force-app/main/default/objects/Cluster__c/Cluster__c.object-meta.xml
<CustomObject>
    <label>Sub Project</label>
    <nameField>
        <label>Sub Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>