force-app/main/default/objects/Cluster__c/fields/IsHighResolutionRequired__c.field-meta.xml
<CustomField>
    <fullName>IsHighResolutionRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHighResolutionRequired</label>
    <type>Checkbox</type>
</CustomField>