force-app/main/default/objects/Cluster__c/fields/Max_Area__c.field-meta.xml
<CustomField>
    <fullName>Max_Area__c</fullName>
    <label>Max Area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>