force-app/main/default/objects/Cluster__c/fields/Min_Area__c.field-meta.xml
<CustomField>
    <fullName>Min_Area__c</fullName>
    <label>Min Area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>