force-app/main/default/objects/Cluster__c/fields/Ongoing_Project__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing Project</label>
    <type>Checkbox</type>
</CustomField>