force-app/main/default/objects/Cluster__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 1</fullName>
            </value>
            <value>
                <fullName>Section 2</fullName>
            </value>
            <value>
                <fullName>Section 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>