force-app/main/default/objects/Cluster__c/listViews/All_Sub_Projects1.listView-meta.xml
<ListView>
    <fullName>All_Sub_Projects1</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unavailable_for_Inventory_Matrix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sub Projects</label>
</ListView>